--- a/black-console.css
+++ b/black-console.css
@@ -1,18 +1,30 @@
-.console-output {
-    padding: 1em;
-    background-color: black;
-    color: white;
-    line-height: 1.5em;
-}
-
 .console-output, .console-output pre {
     font-family: Monaco, "Ubuntu Mono", "DejaVu Sans Mono", Consolas, Menlo;
 }
 
-.console-output a:link {
-    color: #b088ff;
+/*
+ * The console output doesn't have an ID on it, sadly, so style its place in
+ * the DOM and hope nothing else is affected
+ *
+ * If you hit consoleText you can view the raw console text, let's style that
+ * too.
+ */
+body > pre,
+#main-panel > pre,
+.console-output {
+    font-size: 14px;
+    background-color: #111;
+    color: #eee;
+    padding: 10px 10px 30px;
+    border-radius: 3px;
 }
 
-.console-output a:visited {
-    color: #8888ff;
+/**
+ * Set the link color in console output
+ */
+body > pre a,
+body > pre a:visited,
+#main-panel pre a,
+#main-panel pre a:visited {
+    color: #ED4A6A;
 }
