--- a/black-console.css
+++ b/black-console.css
@@ -2,16 +2,8 @@
     font-family: Monaco, "Ubuntu Mono", "DejaVu Sans Mono", Consolas, Menlo;
 }
 
-/*
- * The console output doesn't have an ID on it, sadly, so style its place in
- * the DOM and hope nothing else is affected
- *
- * If you hit consoleText you can view the raw console text, let's style that
- * too.
- */
-body > pre,
-#main-panel > pre,
-.console-output {
+.console-output,
+.console-output pre {
     font-size: 14px;
     background-color: #111;
     color: #eee;
@@ -22,9 +14,7 @@ body > pre,
 /**
  * Set the link color in console output
  */
-body > pre a,
-body > pre a:visited,
-#main-panel pre a,
-#main-panel pre a:visited {
+.console-output pre a,
+.console-output pre a:visited {
     color: #ED4A6A;
 }
