--- a/black-console.css
+++ b/black-console.css
@@ -15,9 +15,8 @@
 /**
  * Set the link color in console output
  */
-.console-output pre a,
-.console-output pre a:visited,
-pre.console-output a,
-pre.console-output a:visited {
+.console-output a,
+.console-output a:visited,
+.console-output a:link {
     color: #ED4A6A;
 }
